examples/test/testpolicy15981.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15981
  namespace: namespace469
spec:
  podSelector:
    matchLabels:
      key47: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value28
          key42: value29
          key11: value17
      podSelector:
        matchLabels:
          key20: value2
          key40: value31
